--- a/react-app/src/components/Pages/Profile/Navigation/MobileSocials.css
+++ b/react-app/src/components/Pages/Profile/Navigation/MobileSocials.css
@@ -15,5 +15,5 @@
 .mobile-socials-div.preview {
   position: absolute;
   bottom: 0;
-  max-width: 400px;
+  max-width: 375px;
 }
