--- a/react-app/src/components/Pages/Profile/Navigation/RNDropdown.css
+++ b/react-app/src/components/Pages/Profile/Navigation/RNDropdown.css
@@ -13,7 +13,7 @@
 
 #rn-dropdown.rn-preview {
   position: absolute;
-  width: 400px;
+  width: 375px;
   top: 4rem;
   height: calc(100vh - 13.5rem);
 }
