--- a/react-app/src/components/Pages/Profile/Navigation/ReppNav.css
+++ b/react-app/src/components/Pages/Profile/Navigation/ReppNav.css
@@ -11,7 +11,7 @@
 }
 
 .repp-nav.mobile {
-    max-width: 400px;
+    max-width: 375px;
 }
 
 .black-nav {
