--- a/react-app/src/components/Pages/Profile/Profile.css
+++ b/react-app/src/components/Pages/Profile/Profile.css
@@ -5,7 +5,7 @@
 }
 
 .profile-page.mobile {
-    max-width: 400px;
+    max-width: 375px;
 }
 
 .profile-page-section {
